fix alert urls being hard to read

--- a/octoprint_cyborgtheme/static/css/overrides.css
+++ b/octoprint_cyborgtheme/static/css/overrides.css
@@ -187,3 +187,8 @@ select[multiple] {
     background-color: inherit;
     color: inherit;
 }
+
+/*Alert notify popup URL colour readability fix */
+.ui-pnotify .alert-danger a, .ui-pnotify .alert-error a {
+    color: #fff020;
+}
